logs/server.log

> vibe-generated-app@1.0.0 dev
> vite


  VITE v5.4.20  ready in 265 ms

  ➜  Local:   http://localhost:3000/
  ➜  Network: http://172.20.16.20:3000/
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /home/workspace): [Error] Loading PostCSS Plugin failed: Cannot find module '/home/workspace/node_modules/util-deprecate/node.js'. Please verify that the package.json has a valid "main" entry

(@/home/workspace/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '/home/workspace/node_modules/util-deprecate/node.js'. Please verify that the package.json has a valid "main" entry

(@/home/workspace/postcss.config.js)
    at load (file:///home/workspace/node_modules/vite/dist/node/chunks/dep-D_zLpgQd.js:33632:11)
    at file:///home/workspace/node_modules/vite/dist/node/chunks/dep-D_zLpgQd.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///home/workspace/node_modules/vite/dist/node/chunks/dep-D_zLpgQd.js:33656:8)
    at processResult (file:///home/workspace/node_modules/vite/dist/node/chunks/dep-D_zLpgQd.js:33726:14)
    at file:///home/workspace/node_modules/vite/dist/node/chunks/dep-D_zLpgQd.js:33856:14]

Node.js v24.8.0
